# course-introduction-fullstack

./: .gitignore  404.html  config.yml  index.html  index.json  index.xml  sitemap.xml
.github/workflows/: publish.yaml
categories/: index.html  index.xml
cloud/: index.html  index.xml
content/: _index.md
content/cloud/: _index.md
content/final_project_fullstack/: _index.md
content/introduction/: 01-setuping_dev_envrionment.md  01-what_is_code.md  02-different_flavor_of_language.md  02-what_is_code.md  03-different_flavor_of_language.md  03-setuping_dev_envrionment.md  03_golang.md  04-condidition_loop_variable_type.md  04_golang.md  05-condidition_loop_variable_type.md  08-framework_library.md  09-ide.md  10-first_project.md  11-first_project_scripting.md  _index.md
content/web_programing/: _index.md
css/: theme-berlingoqc.css
exemple/cpp/hello_world/: CMakeLists.txt
exemple/first_homework/: CMakeLists.txt
exemple/go/: by_reference_or_copy.go  exercice_first_program.go  hello_world.go  print_date.go  valid_if_chacaracter_is_letter.go
final_project_fullstack/: index.html  index.xml
introduction/: index.html  index.xml
introduction/01-setuping_dev_envrionment/: index.html
introduction/01-what_is_code/: index.html
introduction/02-different_flavor_of_language/: index.html
introduction/02-what_is_code/: index.html
introduction/03-different_flavor_of_language/: index.html
introduction/03-setuping_dev_envrionment/: index.html
introduction/03_golang/: index.html
tags/: index.html  index.xml
web_programing/: index.html  index.xml
(+21 files in other folders)
